tests/ui/infinite/infinite-tag-type-recursion.stderr
error[E0072]: recursive type `MList` has infinite size
  --> $DIR/infinite-tag-type-recursion.rs:1:1
   |
LL | enum MList {
   | ^^^^^^^^^^
LL |
LL |     Cons(isize, MList),
   |                 ----- recursive without indirection
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to break the cycle
   |
LL |     Cons(isize, Box<MList>),
   |                 ++++     +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0072`.
